Fix z-index bugs, and ignore empty paste

--- a/src/nodesystem/floatingModal/floatingModal.css
+++ b/src/nodesystem/floatingModal/floatingModal.css
@@ -11,7 +11,7 @@
 	border-radius: 15px;
 	border-color: #757575;
 	min-width: 80px;
-	z-index: 120000;
+	z-index: 100;
 	color: #fff;
 }
 
