--- a/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
+++ b/src/nodesystem/fullscreenPrompt/fullscreenPrompt.css
@@ -8,7 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	background: #101010db;
-	z-index: 100;
+	z-index: 1000000;
 	color: #fff;
 	font: normal normal normal 14px/1.4em 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
