--- a/src/nodesystem/toastMessage/toastMessage.css
+++ b/src/nodesystem/toastMessage/toastMessage.css
@@ -68,7 +68,7 @@
 	justify-content: space-between;
 	align-items: center;
 	transition: all 0.3s ease;
-	z-index: 3;
+	z-index: 100000;
 }
 
 .toast-message-text {
